add: remove nodes from linked list solution